--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.8.1",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "nuxt": "^3.14.1592",
-    "nuxt-icon-tw": "^1.0.0",
     "tailwindcss": "^3.4.17",
     "vue": "latest",
     "vue-router": "latest"
